--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+/* 载入第三方包中的样式文件 */
+
+@import url('todomvc-common/base.css');
+@import url('todomvc-app-css/index.css');
