--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,22 @@
 <section class="todoapp">
   <header class="header">
     <h1>todos</h1>
-    <input (keyup.enter)="addTodo($event)"
-    class="new-todo" placeholder="What needs to be done?" autofocus>
+    <input (keyup.enter)="addTodo($event)" class="new-todo" placeholder="What needs to be done?" autofocus>
   </header>
   <!-- This section should be hidden by default and shown when there are todos -->
   <ng-template [ngIf]="todos.length">
     <section class="main">
-      <input id="toggle-all" class="toggle-all" type="checkbox">
+      <input id="toggle-all" class="toggle-all" type="checkbox" [checked]="toggleAll"
+        (change)="toggleAll = $event.target.checked">
       <label for="toggle-all">Mark all as complete</label>
       <ul class="todo-list">
         <!-- These are here just to show the structure of the list items -->
         <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-        <li *ngFor="let todo of todos">
+        <li *ngFor="let todo of todos;let i = index;" [ngClass]="{completed:todo.done}">
           <div class="view">
-            <input class="toggle" type="checkbox">
+            <input [(ngModel)]="todo.done" class="toggle" type="checkbox">
             <label>{{todo.title}}</label>
-            <button class="destroy"></button>
+            <button class="destroy" (click)="removeTodo(i)"></button>
           </div>
           <input class="edit" value="Rule the web">
         </li>
